--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     ]
   },
   "scripts": {
-    "postinstall": "patch-package && preconstruct dev",
+    "postinstall": "echo 'disabled postinstall patch-package && preconstruct dev'",
     "build": "preconstruct build",
     "watch": "preconstruct watch",
     "dev": "preconstruct dev",
