--- a/packages/r3f-perf/package.json
+++ b/packages/r3f-perf/package.json
@@ -33,11 +33,11 @@
     "three": "*"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "@stitches/react": "^1.1.0",
     "candygraph": "0.3.1",
     "lerp": "^1.0.3",
     "rafz": "^0.1.14",
-    "react-icons": "^4.2.0",
     "three": "*",
     "three-stdlib": "^2.4.0",
     "zustand": "^3.5.10"
